<resources>
    <string name="app_name">MadLibs</string>

    <string name="instruction">Welcome to Mad Libs! I will ask you to fill in words to complete a
        story. You won\'t be able to see the whole story until you are done filling in all the
        missing words. That\'s part of the fun! Click below to get started</string>
    <string name="start">Get started!</string>
    <string name="imagedescription">Image of the logo</string>

    <string name="choose">Choose your story!</string>
    <string name="simple">Simple story</string>
    <string name="tarzan">Tarzan story</string>
    <string name="university">University story</string>
    <string name="clothes">Clothes story</string>
    <string name="dance">Dance story</string>
    <string name="random">Random story</string>

    <string name="fill">Fill in the words to complete the story!</string>
    <string name="wordsleft">word(s) left</string>
    <string name="noun">Fill in a</string>
    <string name="nextword">Next word!</string>

    <string name="yourstory">Your Mad Lib story!</string>
    <string name="newstory">Make another story</string>
</resources>
