<?xml version="1.0" encoding="utf-8"?>

<LinearLayout

    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_weight="1"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:layout_margin="15dp"

    tools:context="com.example.menno_000.madlibs.ChooseStoryActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/choose"
        android:textSize="30sp" />

    <Button
        android:id="@+id/simple"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/simple" />

    <Button
        android:id="@+id/tarzan"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:text="@string/tarzan" />

    <Button
        android:id="@+id/university"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:text="@string/university" />

    <Button
        android:id="@+id/clothes"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:text="@string/clothes" />

    <Button
        android:id="@+id/dance"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:text="@string/dance" />

    <Button
        android:id="@+id/random"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:text="@string/random" />

</LinearLayout>
