<?xml version="1.0" encoding="utf-8"?>

<LinearLayout

    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="15dp"
    tools:context="com.example.menno_000.madlibs.MainActivity" >

    <ImageView
        app:srcCompat="@drawable/madlibs"
        android:contentDescription="@string/imagedescription"
        android:id="@+id/madlibs"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="14"
        android:layout_gravity="center"
        android:layout_margin="5dp"/>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_margin="5dp"
        android:text="@string/instruction" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.02"
        android:gravity="center_horizontal|bottom" >

        <Button
            android:id="@+id/getstarted"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="@string/start" />
    </RelativeLayout>

</LinearLayout>